drumkv1 - an old-school drum-kit sampler
----------------------------------------

ChangeLog

0.1.0  2012-10-25  First public release.

- MIDI Note-off event enablement parameter introduced.

- Slight minor fix on fast-release re-triggering.

- Element list and sample widget context menu's now a reality.

- Added some command line options to the stand-alone JACK client
  program (--help and --version information).

- Reimplemented mouse-wheel stepping on combo-dial knob widgets.

- LV2 state chunk retrieve/save implementation complete.

- Current element selection and stabilization.

- Preset load/save is now fully functional.

- Access to core engine instance has been slightly refactored.

- Classic ADSR replaced by custom one-shot drum-mode specific envelope
  generators (Attack, Delay1, Level2, Delay2).

- Detached generic double-linked list class into its own header.


0.0.0  2012-10-03  Initial change-log entry.